--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <% if user_signed_in? %>
+      <%= link_to :logout, destroy_user_session_path, method: "delete" %>
+    <% else %>
+      <%= link_to :login, new_user_session_path %>
+    <% end %>
   </head>
 
   <body>
