Update recipe form with basics

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,3 +2,7 @@
 
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
 <%= link_to 'Back', recipes_path %>
+
+<%= @recipe.title %>
+<%= @recipe.ingredients %>
+<%= @recipe.instructions %>
