--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <%= form.text_field :title %>
+  <%= form.text_area :ingredients %>
+  <%= form.text_area :instructions %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
