Partially create instructions

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -13,9 +13,8 @@
 
   <%= form.text_field :title %>
   <%= form.text_area :ingredients %>
-  <%= form.text_area :instructions %>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Commit and Add Instructions" %>
   </div>
 <% end %>
