Add home button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <% else %>
       <%= link_to :login, new_user_session_path %>
     <% end %>
+    <%= link_to :home, recipes_url %>
   </head>
 
   <body>
