Add picture to recipes

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -13,6 +13,7 @@
 
   <%= form.text_field :title %>
   <%= form.text_area :ingredients %>
+  <%= form.file_field :picture %>
 
   <div class="actions">
     <%= form.submit "Commit and Add Instructions" %>
