--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -12,9 +12,12 @@
   <tbody>
     <% @recipes.each do |recipe| %>
       <tr>
+        <td><%= recipe.title %></td>
+        <% if recipe.picture.attached? %>
+          <td><%= image_tag recipe.picture, size: "250x250" %></td>
+        <% end %>
         <td><%= link_to 'Show', recipe %></td>
         <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
-        <td><%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
