Rename instruction add button

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -16,6 +16,6 @@
   <%= form.file_field :picture %>
 
   <div class="actions">
-    <%= form.submit "Commit and Add Instructions" %>
+    <%= form.submit "Commit and Edit Instructions" %>
   </div>
 <% end %>
