--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,18 @@
             <% else %>
               <%= link_to :login, new_user_session_path %>
             <% end %>
+            <br>
+            <%= link_to 'New Recipe', new_recipe_path %>
           </div>
         </div>
       </div>
     </nav>
   </head>
 
+  <br>
+  <br>
+  <br>
+  <br>
   <body>
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
