--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,25 +1,15 @@
 <p id="notice"><%= notice %></p>
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @recipes.each do |recipe| %>
-      <tr>
-        <td><%= recipe.title %></td>
-        <% if recipe.picture.attached? %>
-          <td><%= image_tag recipe.picture, size: "250x250" %></td>
-        <% end %>
-        <td><%= link_to 'Show', recipe %></td>
-        <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Recipe', new_recipe_path %>
+<div class="container">
+  <div class="row">
+      <% @recipes.each do |recipe| %>
+        <div class="col-sm-3">
+          <h3><%= link_to "#{recipe.title}", recipe %></h3>
+          <% if recipe.picture.attached? %>
+            <%= image_tag recipe.picture, size: "250x250" %>
+          <% end %>
+          <!--<%= link_to 'Edit', edit_recipe_path(recipe) %>-->
+        </div>
+      <% end %>
+      <br>
+  </div>
+</div>
