--- a/app/views/instructions/new.html.erb
+++ b/app/views/instructions/new.html.erb
@@ -1,9 +1,11 @@
 <% @addedInstructions.each do |i| %>
-  <%= i.body %>
-  <% if i.picture.attached? %>
-    <%= image_tag i.picture, size: "250x250" %>
-  <% end %>
-  <%= link_to "Delete", [@recipe, i], method: :delete, data: {confirm: "Are you sure?"} %>
+  <div class="single-instruction-area">
+    <%= simple_format(i.body) %>
+    <% if i.picture.attached? %>
+      <%= image_tag i.picture, size: "250x250" %>
+    <% end %>
+    <%= link_to "Delete", [@recipe, i], method: :delete, data: {confirm: "Are you sure?"} %>
+  </div>
   <br>
 <% end %>
 <%= form_with(model: @instruction, url: [@recipe, @instruction], local: true) do |form| %>
