--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>Editing Recipe</h1>
+<div class="container text-center">
+  <h1>Editing <%= @recipe.title %></h1>
 
-<%= render 'form', recipe: @recipe %>
+  <%= render 'form', recipe: @recipe %>
 
-or <%= link_to "Delete Permanently", @recipe, method: :delete, data: {confirm: "Are you sure?"} %>
-
-<%= link_to 'Show', @recipe %> |
-<%= link_to 'Back', recipes_path %>
+  <%= link_to "Delete Permanently", @recipe, method: :delete, data: {confirm: "Are you sure?"}, class: "text-danger" %> or
+  <%= link_to 'Abort Edits', recipes_path, class: "text-primary" %>
+</div>
