--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,8 +1,19 @@
 <p id="notice"><%= notice %></p>
-<h1> HI THERE </h1>
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back', recipes_path %>
-
-<%= @recipe.title %>
-<%= @recipe.ingredients %>
-<%= "by #{@user.email}" %>
+<div class="container text-center">
+  Not happy with this? <%= link_to 'Edit...', edit_recipe_path(@recipe) %> or <%= link_to "Delete Permanently", @recipe, method: :delete, data: {confirm: "Are you sure?"} %>
+  <br>
+  <%= "#{@recipe.title} by #{@user.email}" %>
+  <%= image_tag @recipe.picture, class: "img-fluid" %>
+  <div class="container">
+    <h4> You will need: </h4>
+    <%= simple_format(@recipe.ingredients) %>
+    <hr>
+    <h4> Instructions: </h4>
+    <% @instructions.each do |i| %>
+      <div class="single-instruction-area">
+        <%= simple_format(i.body) %>
+      </div>
+    <% end %>
+  </div>
+  <br>
+</div>
