--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 
   <%= form.text_field :title, class: "form-control", placeholder: "Title..." %>
+  <hr>
+  <h4> Instructions </h4>
   <%= form.text_area :ingredients, rows: "15", class: "form-control rounded-20", placeholder: "Body..." %>
   <%= form.file_field :picture %>
 
