--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,3 +57,14 @@ a:hover {
 .instruction-picture {
   margin: 10px;
 }
+
+.tags-area {
+  border-style: solid;
+  border-color: $pink;
+  border-radius: 5px;
+  border-width: 5px;
+}
+
+.tags-text {
+  margin: 10px;
+}
