--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <% if user_signed_in? %>
               <%= link_to :logout, destroy_user_session_path, method: "delete" %>
+              <br>
+              <%= link_to "edit password", edit_user_registration_path %>
             <% else %>
               <%= link_to :login, new_user_session_path %>
             <% end %>
