Adjust navbar items

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,22 +15,23 @@
         <ul class="navbar-nav mr-auto">
           <%= link_to "Whiteline Recipes", recipes_url, class: "navbar-brand" %>
         </ul>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Menu
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <% if user_signed_in? %>
-              <%= link_to :logout, destroy_user_session_path, method: "delete" %>
-              <br>
-              <%= link_to "edit password", edit_user_registration_path %>
-            <% else %>
-              <%= link_to :login, new_user_session_path %>
-            <% end %>
-            <br>
-            <%= link_to 'New Recipe', new_recipe_path %>
-          </div>
-        </div>
+        <ul class="navbar-nav ml-auto">
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to '[New Recipe]', new_recipe_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "[Edit Password]", edit_user_registration_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "[Logout]", destroy_user_session_path, method: "delete", class: "nav-link" %>
+            </li>
+          <% else %>
+          <li class="nav-item">
+            <%= link_to :login, new_user_session_path, class: "nav-link" %>
+          </li>
+          <% end %>
+        </ul>
       </div>
     </nav>
   </head>
