--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WhitelineRecipes</title>
+    <title>Whiteline's Cookbook</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
     <nav class="navbar fixed-top navbar-expand-lg">
       <div class="container">
         <ul class="navbar-nav mr-auto">
-          <%= link_to "Whiteline Recipes", recipes_url, class: "navbar-brand" %>
+          <%= link_to "Whiteline's Cookbook", recipes_url, class: "navbar-brand" %>
         </ul>
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
@@ -28,7 +28,7 @@
             </li>
           <% else %>
           <li class="nav-item">
-            <%= link_to :login, new_user_session_path, class: "nav-link" %>
+            <%= link_to "[Login]", new_user_session_path, class: "nav-link" %>
           </li>
           <% end %>
         </ul>
