--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -13,8 +13,8 @@
 
   <%= form.text_field :title, class: "form-control", placeholder: "Title..." %>
   <hr>
-  <h4> Instructions </h4>
-  <%= form.text_area :ingredients, rows: "15", class: "form-control rounded-20", placeholder: "Body..." %>
+  <h4> Ingredients </h4>
+  <%= form.text_area :ingredients, rows: "15", class: "form-control rounded-20", placeholder: "2 tbsp butter\n5 grams coffee\n2 1/2 cups sugar" %>
   <hr>
   <%= form.text_field :tags, class: "form-control", placeholder: "breakfast;lunch;yum;..." %>
   <%= form.file_field :picture %>
